--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">Header</div>
-      <div class="image-1">Image 1</div>
-      <div class="imge-2">Image 2</div>
-      <div class="image-3">Image 3</div>
-      <div class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
-      </div>
-      <div class="side-nav">Side Nav</div>
-      <div class="footer">Footer</div>
+      <div class="item header">Header</div>
+      <div class="item">1 of 3</div>
+      <div class="item">2 of 3</div>
+      <div class="item">3 of 3</div>
+      <div class="item content">Content</div>
+      <div class="item side-nav">Side Nav</div>
+      <div class="item footer">Footer</div>
     </div>
 
   </body>
 </html>
 
-<!--
-<div class="image-1">
+
+<!-- <div class="image-1">
   <img src="https://images.unsplash.com/photo-1486262322291-6f4dbcd69e10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="Image 1" class="image">
 </div>
 <div class="image-2">
